Bugfix: folders thumbnails were squashed because height was different than width

--- a/src/stylesheets/structure.css
+++ b/src/stylesheets/structure.css
@@ -173,7 +173,6 @@ div.directory .dirname
 
 div.directory img{
 	width:100%;
-	max-height: 150px;
 }
 
 /* Linear Panel */
